@@ -3,6 +3,9 @@
 (database "cpu" "68000" err) ; "","Line 1: syntax error, unexpected SYM, expecting ')' 'err'",""
 (database "cpu" (safe)) ; "","Line 1: syntax error, unexpected SAFE 'safe'",""
 (database "cpu") ; "","Unknown",""
+(database "os") ; "","Unknown",""
+(database "os" "Unknown") ; "","1",""
+(database "os" "Windows") ; "","0",""
 (database "zpu") ; "","Unknown",""
 (database  $1) ; "","Unknown",""
 (database "cpu" "Unknown") ; "","1",""
